objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Contact_Method__c</fullName>
        <label>Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Email_Inquiry__c</fullName>
        <label>Craigslist Listing Email Inquiry</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Craigslist_Listing_Phone_Number_Inquiry__c</fullName>
        <label>Craigslist Listing Phone Number Inquiry</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Experience_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Experience Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Customer Experience</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HTTP_Referrer__c</fullName>
        <label>HTTP Referrer</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_Trade_In__c</fullName>
        <label>Has Trade-In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Token__c</fullName>
        <description>An incentive token that has been submitted to be applied to this deal.</description>
        <label>Incentive Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Email_Content__c</fullName>
        <label>Initial Email Content</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inquiry_Type__c</fullName>
        <label>Inquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hot Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Coming Soon Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Sale Pending Notification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Drive Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Geolocation__c</fullName>
        <label>Requested Test Drive Geolocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Location__c</fullName>
        <label>Requested Test Drive Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Test_Drive_Time__c</fullName>
        <label>Requested Test Drive Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UTM_Campaign__c</fullName>
        <label>UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Content__c</fullName>
        <label>UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Medium__c</fullName>
        <label>UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Source__c</fullName>
        <label>UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UTM_Term__c</fullName>
        <label>UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Flipper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scammer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN_Inquiry__c</fullName>
        <label>VIN Inquiry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Contact_Method__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>